overflow:hidden 수정, html 태그 오류 수정

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <!-- 포트폴리오1 page -->
             <div id="conts4">                
-                <img src="img/conts4.png">alt="">  
+                <img src="img/conts4.png" alt="">  
                 <a href="https://garfieldv0v.github.io/elle/" target="_blank">페이지 바로가기</a>             
             </div>
 
