width:100%; height:990px; 맞춤

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="c1_img">
                     <ul>
                         <li>
-                            <img src="img/e_pluse.png" alt="">   
+                            <span class="c1_ig"></span>
                         </li>
 
                         <li class="c1_text">
@@ -55,52 +55,44 @@
             </div>
 
             <!-- conts2-3 소개 page -->
-            <div id="conts2">
-                <img src="img/conts2.png" alt="">              
+            <div id="conts2">         
             </div>
 
-            <div id="conts3">
-                <img src="img/conts3.png" alt="">
+            <div id="conts3">                
             </div>
 
             <!-- 포트폴리오1 page -->
-            <div id="conts4">                
-                <img src="img/conts4.png" alt="">  
+            <div id="conts4">       
                 <a href="https://garfieldv0v.github.io/elle/" target="_blank">페이지 바로가기</a>             
             </div>
 
             <!-- 포트폴리오2 page -->
-            <div id="conts5">
-                <img src="img/conts5.png" alt="">               
+            <div id="conts5">            
                 <a href="https://garfieldv0v.github.io/taehwaroo/"  target="_blank">페이지 바로가기</a>
             </div>
 
             <!-- 포트폴리오3 page -->
             <div id="conts6">
-                <img src="img/conts6.png" alt="">
                 <a href="https://garfieldv0v.github.io/palmhouse/
                 " target="_blank">페이지 바로가기</a>  
             </div>
 
             <!-- 포트폴리오4 page -->
-            <div id="conts7">
-                <img src="img/conts7.png" alt="">
+            <div id="conts7">                
             </div>
 
             <!-- 포트폴리오5 page -->
             <div id="conts8">
-                <img src="img/conts8.png" alt="">
-            </div>
+\            </div>
 
             <!-- 포트폴리오6 page -->
             <div id="conts9">
-                <img src="img/conts9.png" alt="">
             </div>
 
             <!-- 포트폴리오7 page -->
             <div id="conts10">
-                <img src="img/conts10.png" alt="">
-            </div>            
+            </div>       
+                 
         </main>
 
         <footer>
