--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 
             <!-- 포트폴리오3 page -->
             <div id="conts6">
-                <a href="https://garfieldv0v.github.io/palmhouse/
-                " target="_blank">페이지 바로가기</a>  
+                <a href="https://garfieldv0v.github.io/palmhouse/" target="_blank">페이지 바로가기</a>  
             </div>
 
             <!-- 포트폴리오4 page -->
@@ -92,7 +91,7 @@
             <!-- 포트폴리오7 page -->
             <div id="conts10">
             </div>       
-                 
+
         </main>
 
         <footer>
