--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <!-- 포트폴리오1 page -->
             <div id="conts4">       
-                <a href="https://garfieldv0v.github.io/elle/" target="_blank">페이지 바로가기</a>             
+                <a onclick="window.open('https://garfieldv0v.github.io/elle/','_blank', 'left=600,top=10,height=800,width=360,scrollbars=yes,status=yes');">페이지 바로가기</a>                      
             </div>
 
             <!-- 포트폴리오2 page -->
