a_태그 속성값 다시 위치:)

--- a/index.html
+++ b/index.html
@@ -62,18 +62,24 @@
             </div>
 
             <!-- 포트폴리오1 page -->
-            <div id="conts4">       
-                <a onclick="window.open('https://garfieldv0v.github.io/elle/','_blank', 'left=600,top=10,height=800,width=360,scrollbars=yes,status=yes');">페이지 바로가기</a>                      
+            <div id="conts4">  
+                <div class="a_div">  
+                    <a onclick="window.open('https://garfieldv0v.github.io/elle/','_blank', 'left=600,top=10,height=800,width=360,scrollbars=yes,status=yes');">페이지 바로가기</a>                      
+                </div>   
             </div>
 
             <!-- 포트폴리오2 page -->
-            <div id="conts5">            
-                <a href="https://garfieldv0v.github.io/taehwaroo/"  target="_blank">페이지 바로가기</a>
+            <div id="conts5"> 
+                <div class="a_div">             
+                    <a href="https://garfieldv0v.github.io/taehwaroo/"  target="_blank">페이지 바로가기</a>
+                </div>
             </div>
 
             <!-- 포트폴리오3 page -->
             <div id="conts6">
-                <a href="https://garfieldv0v.github.io/palmhouse/" target="_blank">페이지 바로가기</a>  
+                <div class="a_div">  
+                    <a href="https://garfieldv0v.github.io/palmhouse/" target="_blank">페이지 바로가기</a>  
+                </div>
             </div>
 
             <!-- 포트폴리오4 page -->
